--- a/Hakaton.Api/appsettings.json
+++ b/Hakaton.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostGres": "Server=localhost;port=5432;database=classroom;user id=postgres;password=postgres"
+  }
 }
