--- a/Hakaton.Api/appsettings.json
+++ b/Hakaton.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostGres": "Server=localhost;port=5432;database=classroom;user id=postgres;password=postgres"
+    "PostGres": "host=localhost;port=5432;database=homework;userid=postgres;password=123"
   }
 }
