--- a/Hakaton.Api/appsettings.json
+++ b/Hakaton.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostGres": "host=localhost;port=5432;database=homework;userid=postgres;password=Postgres"
+    "PostGres": "host=localhost;port=5432;database=hakaton;userid=postgres;password=postgres"
   }
 }
